test/conformance/chainsaw/generating-policies/reports/error-generating-resource/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: error-generating-resource-1
---
apiVersion: v1
kind: Namespace
metadata:
  name: error-generating-resource-2
---
apiVersion: v1
kind: Namespace
metadata:
  name: error-generating-resource-3
