test/conformance/chainsaw/generating-policies/reports/error-generating-resource/policy.yaml
apiVersion: policies.kyverno.io/v1beta1
kind: GeneratingPolicy
metadata:
  name: error-generating-resource
spec:
  evaluation:
    synchronize:
      enabled: true
  matchConstraints:
    resourceRules:
    - apiGroups:   [""]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["configmaps"]
  variables:
    - name: nsList
      expression: "object.data.namespaces.split(',')"
    - name: networkpolicy
      expression: >-
        [
          {
            "kind": dyn("NetworkPolicy"),
            "apiVersion": dyn("networking.k8s.io/apps/v1"),
            "metadata": dyn({
              "name": "error-generating-resource",
            }),
            "spec": dyn({
              "podSelector": dyn({}),
              "policyTypes": dyn(["Ingress", "Egress"])
            })
          }
        ]
  generate:
    - expression: >
        variables.nsList.all(ns, generator.apply(ns, variables.networkpolicy))
