test/conformance/chainsaw/generating-policies/reports/error-generating-resource/report-assert.yaml
apiVersion: wgpolicyk8s.io/v1alpha2
kind: PolicyReport
metadata:
  labels:
    app.kubernetes.io/managed-by: kyverno
  namespace: default
  ownerReferences:
  - apiVersion: v1
    kind: ConfigMap
    name: error-generating-resource
results:
- policy: error-generating-resource
  properties:
    process: admission review
  result: error
  rule: error-generating-resource
  scored: true
  source: KyvernoGeneratingPolicy
scope:
  apiVersion: v1
  kind: ConfigMap
  name: error-generating-resource
  namespace: default
summary:
  error: 1
  fail: 0
  pass: 0
  skip: 0
  warn: 0
