test/conformance/chainsaw/generating-policies/reports/error-generating-resource/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: error-generating-resource
spec:
  steps:
  - name: create namespaces
    try:
    - apply:
        file: namespaces.yaml
  - name: create policy
    use:
      template: ../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait-generating-policy-ready
    use:
      template: ../../../_step-templates/generating-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: error-generating-resource
  - name: create trigger
    try:
    - apply:
        file: trigger.yaml
  - name: check that the networkpolicy is not generated in each namespace
    try:
    - error:
        file: downstream-error.yaml
  - name: check that the report is generated
    try:
    - assert:
        file: report-assert.yaml
        timeout: 60s
